2013-05-19  Dmitry Gutov  <dgutov@yandex.ru>

	* indent/ruby.rb: Add multiline regexp example.

	* automated/ruby-mode-tests.el (ruby-heredoc-highlights-interpolations)
	(ruby-regexp-skips-over-interpolation)
	(ruby-regexp-continues-till-end-when-unclosed)
	(ruby-regexp-can-be-multiline)
	(ruby-interpolation-inside-percent-literal): New tests.

2013-05-08  Stefan Monnier  <monnier@iro.umontreal.ca>

	* indent/ruby.rb: Fix indentation after =; add more cases.

2013-05-05  Stefan Monnier  <monnier@iro.umontreal.ca>

	* indent/pascal.pas: Add test for mis-identified comments.

2013-04-01  Masatake YAMATO  <yamato@redhat.com>

	* automated/imenu-tests.el: New file.  (Bug#14112)

2013-04-19  Fabián Ezequiel Gallina  <fgallina@gnu.org>

	* automated/python-tests.el (python-imenu-prev-index-position-1):
	Remove test.
	(python-imenu-create-index-1, python-imenu-create-flat-index-1):
	New tests.

2013-04-17  Fabián Ezequiel Gallina  <fgallina@gnu.org>

	* automated/python-tests.el (python-nav-backward-defun-2)
	(python-nav-backward-defun-3, python-nav-forward-defun-2)
	(python-nav-forward-defun-3): New tests.

2013-04-17  Fabián Ezequiel Gallina  <fgallina@gnu.org>

	* automated/python-tests.el (python-nav-backward-defun-1)
	(python-nav-forward-defun-1): New tests.

2013-04-09  Masatake YAMATO  <yamato@redhat.com>

	* automated/add-log-tests.el: New file. (Bug#14112)

2013-03-30  Fabián Ezequiel Gallina  <fabian@anue.biz>

	* automated/python-tests.el (python-indent-block-enders): New test.
	(python-info-current-defun-2): Fix test.

2013-03-05  Paul Eggert  <eggert@cs.ucla.edu>

	* indent/octave.m: Fix encoding error in comment.  Add coding tag.

2013-02-28  Fabián Ezequiel Gallina  <fgallina@cuca>

	* automated/python-tests.el (python-tests-with-temp-buffer): Doc fix.
	(python-tests-with-temp-file): New macro.
	(python-tests-shell-interpreter): New var.
	(python-shell-get-process-name-1)
	(python-shell-internal-get-process-name-1)
	(python-shell-parse-command-1)