@@ -1,3 +1,7 @@
+2013-05-23  Kenichi Handa  <handa@gnu.org>
+
+	* automated/decoder-tests.el: New file.
+
 2013-05-19  Dmitry Gutov  <dgutov@yandex.ru>
 
 	* indent/ruby.rb: Add multiline regexp example.
